--- a/cp2020/.env
+++ b/cp2020/.env
@@ -21,7 +21,8 @@ APP_SECRET=3648119faf6e5b492ebc0c33f0b5bfb0
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://test-around:zvzhksoisylhybom@smtp.yandex.ru:465?encryption=ssl&auth_mode=login
+MAILER_SENDER=test-around@yandex.ru
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -29,5 +30,10 @@ APP_SECRET=3648119faf6e5b492ebc0c33f0b5bfb0
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://cp2020_user:cp2020_password@127.0.0.1:3306/cp2020_db?serverVersion=5.7
+DATABASE_URL=mysql://root:root@mysql:3306/cp2020_db?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+
+###< nelmio/cors-bundle ###
