--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -38,4 +38,5 @@ WORKDIR /var/www/cp2020/
 
 RUN composer install
 RUN bin/console doctrine:schema:create
+RUN bin/console doctrine:schema:update --force
 RUN bin/console cache:clear
