--- a/cp2020/config/routes/api_platform.yaml
+++ b/cp2020/config/routes/api_platform.yaml
@@ -2,3 +2,6 @@ api_platform:
     resource: .
     type: api_platform
     prefix: /api
+swagger_ui:
+    path: /docs
+    controller: api_platform.swagger.action.ui
