added API methods

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,7 @@
 /cp2020/.phpunit
 /cp2020/.phpunit.result.cache
 /cp2020/phpunit.xml
+/cp2020/.DS_Store
+/cp2020/.idea/
+/.idea/
 ###< symfony/phpunit-bridge ###
