--- a/cp2020/config/packages/security.yaml
+++ b/cp2020/config/packages/security.yaml
@@ -36,4 +36,5 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/admin, roles: ROLE_USER }
+         - { path: ^/hirer, roles: ROLE_USER }
