--- a/cp2020/Makefile
+++ b/cp2020/Makefile
@@ -4,3 +4,8 @@ boot:
 	- bin/console doctrine:schema:create
 	- bin/console doctrine:schema:update --force
 	- bin/console cache:clear
+
+.PHONY: clear
+clear:
+	- bin/console doctrine:schema:update --force
+	- bin/console cache:clear
